--- a/README.rdoc
+++ b/README.rdoc
@@ -11,7 +11,7 @@ See the Credits section below for more details.
 
 Pretty straightforward.  Clone and symlink:
 
-  $ git clone git://github.com/amerine/dotvim.git ~/.vim
+  $ git clone git://github.com/bbauer/.vim.git ~/.vim
   $ ln -s ~/.vim/vimrc ~/.vimrc
 
 Then install/update the bundles:
